src/styles/Cards.css
main {
  display: flex;
  flex-flow: column nowrap;
}

.card {
  background: white;
  border-radius: 10px;
  box-shadow: 0 20px 50px rgba(0, 0, 0, 0.1);
  display: flex;
  flex-flow: column nowrap;
  height: 20em;
  justify-content: space-between;
  margin: 2em 0.5em;
  width: 10em;
}

.card img {
  align-self: center;
  border: 5px solid #1cc7d0;
  border-radius: 50%;
  margin-top: 10px;
  width: 80%;
}

.card:hover {
  box-shadow: 0 30px 70px rgba(0, 0, 0, 0.2);
}

.card .card-body {
  left: 0;
  text-align: center;
  width: 100%;
}

.filter-button {
  margin: 0.5em;
  width: 6em;
}

.filter-buttons {
  margin: 0.5em;
}

.food-cards {
  display: flex;
  flex-flow: row wrap;
}

.card-button {
  width: 100%;
}

.card-footer {
  padding: 0.2rem;
}

